--- a/src/base/keyboard_node/setup.cfg
+++ b/src/base/keyboard_node/setup.cfg
@@ -1,4 +1,4 @@
 [develop]
-script_dir=$base/lib/keyboard_control
+script_dir=$base/lib/keyboard_node
 [install]
-install_scripts=$base/lib/keyboard_control
+install_scripts=$base/lib/keyboard_node
